# sorting-visualizer-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
scripts/: build.ps1  init_project.ps1
src/: main.cpp
src/animation/: AnimationPlayer.cpp  AnimationPlayer.hpp  README.md
src/app/: App.cpp  App.hpp  AppUi.cpp  AppUi.hpp  README.md  VisualizerSession.cpp  VisualizerSession.hpp
src/domain/: Algorithm.hpp  README.md  SortEvent.hpp  SortItem.hpp  SortSpec.hpp  SortState.hpp
src/input/: InputGenerator.cpp  InputGenerator.hpp  README.md
src/rendering/: README.md  RaylibRenderer.cpp  RaylibRenderer.hpp
src/sorting/: BubbleSort.cpp  InsertionSort.cpp  README.md  SelectionSort.cpp  SortRunner.cpp  SortRunner.hpp
src/testing/: AnimationPlayerTests.cpp  InputGeneratorTests.cpp  README.md  SortTests.cpp  SortTests.hpp  SortingTests.cpp  TestMain.cpp  TestSupport.cpp  TestSupport.hpp  VisualizerSessionTests.cpp
